--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
 <h2>VEPP</h2>
+
+<%= link_to 'Inscription',new_model_registration_path %>
+<%= link_to 'Connexion',new_model_session_path %>
+<%= link_to 'Déconnexion',destroy_model_session_path, method: :delete %>
