--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,7 +19,8 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <% else %>
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <%= current_model.email %>
+              <%= image_tag avatar_url(current_model), class:"img-circle avatar-small" %>
+              <%= current_model.speudo %>
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "VEPP", root_path %></li>
