--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
             <%= devise_error_messages! %>
  
               <div class="form-group">
-                  <%= f.text_field :speudo, autofocus: true, class: "form-control", placeholder: "Ton speudo" %>
+                  <%= f.text_field :speudo, autofocus: true, class: "form-control", placeholder: "Ton pseudo" %>
               </div>
  
               <div class="form-group">
