--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,9 @@
         <div class="form-group">
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder:"email" %>
         </div>
-
+        <div class="form-group">
+          <%= f.text_field :speudo, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"pseudo" %>
+        </div>
         <div class="form-group">
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
