--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>workspace</title>
+  <title>VEPP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
 <%= render 'layouts/navigation' %>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%= render 'shared/message'%>
 <div class="container"><%= yield %></div>
 
 </body>
